added stephen high corrections to TA chapter

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -538,7 +538,7 @@ Whilst the focus of this thesis is primarily on \gls{tmh}s it is important to ac
 \label{fig:barrel-versus-helix}
 \end{figure}
 
-$\beta$ barrel proteins are present only in a few membrane types; the outer membrane of Gram\--negative bacteria for which they constitute between 2-3\% of the genome \cite{Wimley2003}, and in the outer membranes of eukaryotic chloroplasts and mitochondrial membranes.
+$\beta$ barrel proteins are present only in a few membrane types; the outer membrane of Gram\--negative bacteria for which they constitute between 2-3\% of the genome \cite{Wimley2003}, and in the outer membranes of eukaryotic chloroplasts and the \gls{mom}.
 Their restriction to these membrane types is the result of ancestral symbiogenesis \cite{McFadden2001, Gray1999, Fischer1994, Zeth2010, Fairman2011, Ulrich2015}.
 
 These outer membrane proteins cause the membranes to be permeable, diminishing membrane potential between the outer and the inner membrane.
@@ -560,10 +560,10 @@ Once at the inner surface, the BAM complex assembles and integrates the $\beta$ 
 \includegraphics[width=1\textwidth]{Intro/beta-mito-versus-bacteria}
 		\captionof{figure}[A cartoon of the biogenesis of $\protect\beta$ barrel membrane proteins in mitochondria and Gram\--negative bacteria.]{\textbf{A cartoon of the biogenesis of $\protect\beta$ barrel membrane proteins in mitochondria and Gram\--negative bacteria.}
 		This is an overview of the current model of $\beta$\--barrel protein membrane integration.
-		A)In bacteria, SecB chaperones the nascent peptide to SecYEG where it is transported across the inner membrane.
+		A) In bacteria, SecB chaperones the nascent peptide to SecYEG where it is transported across the inner membrane.
 		Once the \gls{sp} is cleaved, the protein is chaperoned to the BAM machinery by SurA, DegQ, or Skp.
 		The BAM machinery integrates the protein into the membrane.
-		B)After ribosomal translation, the nascent peptide is transported across the mitochondrial outer membrane by the \gls{tom} machinery.
+		B) After ribosomal translation, the nascent peptide is transported across the \gls{mom} by the \gls{tom} machinery.
 		Several Tim recognition molecules then attach to the protein and present it to the TOB insertion machinery, which integrates the protein into the membrane.
 		Adapted from Ulrich \& Rapoport, 2015 \cite{Ulrich2015}.
 
@@ -576,7 +576,7 @@ There is Tom40, Tob55, two isoforms of a porin, and Mdm10 \cite{Ulrich2015}.
 And yet, indeed it was shown that a $\beta$ barrel protein fragments not found in the eukaryotic proteome called trimeric autotransporter can be recognised and assembled by the mitochondria \cite{Muller2011}.
 Since there is no need to cross the inner membrane, mitochondrial proteins do not have the cleavable \gls{sp}, or any other known targeting signal \cite{Ulrich2015}.
 After cytosolic ribosomes complete the translation, the $\beta$ barrel proteins are recognised on the mitochondrial surface by the \gls{tom} complex import receptors, handed to the $\beta$ barrel protein Tom40 which is the central machinery for mitochondrial protein import \cite{Chacinska2009}.
-After being processed through the \gls{tom} machinery, hexameric chaperone complexes of Tim8 in complex with Tim13, and Tim9 in complex with 10 to the TOB complex (also known as the SAM complex) also on the outer membrane which integrates the $\beta$ barrel protein into the membrane \cite{Wiedemann2003, Paschen2003, Gentle2004}.
+After being processed through the \gls{tom} machinery, hexameric chaperone complexes of Tim8 in complex with Tim13, and Tim9 in complex with 10 to the TOB complex (also known as the SAM complex) also on the \gls{mom} which integrates the $\beta$ barrel protein into the membrane \cite{Wiedemann2003, Paschen2003, Gentle2004}.
 
 Whereas mitochondria originated from the ancestral incorporation of $\alpha$\--proteobacteria \cite{Gray1999}, chloroplasts were thought to originate from the incorporation of cyanobacterium \cite{McFadden2001}.
 Similarly to mitochondrial $\beta$ barrel proteins, there is no cleavable targeting \gls{sp} targeting for the chloroplast since they integrate on the internal side of the membrane, however much less is known about the precise insertion machinery of $\beta$ barrel proteins at a molecular level in chloroplasts \cite{Ulrich2015}.
