--- a/thesis.tex
+++ b/thesis.tex
@@ -62,7 +62,8 @@
 \newacronym{ap}{AP}{Arrest Peptide}
 \newacronym{emc}{EMC}{ER Membrane protein Complex}
 \newacronym{em}{EM}{Electron microscopy}
-\newacronym{tom}{TOM}{translocase of the outer membrane}
+\newacronym{tom}{TOM}{Translocase of the outer membrane}
+\newacronym{mom}{MOM}{Mitochondrial outer membrane}
 
 
 
